--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,4 +1,4 @@
 {% extends "layout.html" %}
 {% block content %}
-You picked the wrong house full(404)
+<div class="error-page"></div>
 {% endblock %}
