--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,4 +1,22 @@
 {% extends "layout.html" %}
 {% block content %}
-life is good, life is great
+
+
+<div class="page-name">
+    <h1>ABOUT US</h1>
+</div>
+
+<div class="about-page">
+    <p>
+        I built this website to create a hub where gaming enthusiasts
+        can explore and share information about a wide range of video games.
+        My goal is to provide a platform where visitors can discover new games,
+        read detailed information, and find suggestions tailored to their interests.
+        Additionally, I want to encourage a vibrant community where users can contribute their own game suggestions
+        and experiences. By allowing others to submit their favorite games and personal insights,
+        I aim to enrich the site with diverse perspectives and cultural viewpoints, making it a valuable resource
+        for gamers from all backgrounds.
+    </p>
+</div>
+
 {% endblock %}
