--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -7,9 +7,12 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="/static/javascript/filter.js"></script>
         <script src="/static/javascript/dashboard.js"></script>
-        <script src="/static/javascript/add_stuff.js"></script>
+        <script src="/static/javascript/add_game.js"></script>
         <script src="/static/javascript/submit_limit.js"></script>
-        <script src="/static/javascript/img-size-limit.js"></script>
+        <script src="/static/javascript/add_company.js"></script>
+        <script src="/static/javascript/add_director.js"></script>
+        <script src="/static/javascript/add_founder.js"></script>
+        <script src="/static/javascript/register.js"></script>
     </head>
     <body  class="fade">
 
@@ -29,7 +32,8 @@
         </main>
         
         <footer>
-            that's it boah
+            <p>&copy; 2023 Top Ten Movies | All rights reserved</p>
+    <p> By Pourya That's it Boah</p>
         </footer>
     </body>
 </html>
