--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -48,6 +48,10 @@
         <a href="/about">About us</a>
     </div>
 
+    <div class="login-admin">
+        <a href="/contact">Contact us</a>
+    </div>
+
     <div class="sticker">
         <img src="/static/games_images/sticker.jpg">
     </div>
