--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -47,7 +47,18 @@
     <ul>
         {% if user_founders %}
             {% for founder in user_founders %}
-                <li><a href="/founder/{{ founder.id }}">{{ founder.name }}</a></li>
+            <div class="item">
+                <a href="/founder/{{ founder.id }}" class="item-link">
+                    {% if founder.picture_1 %}
+                    <img src="{{ url_for('static', filename='founders_images/' ~ founder.picture_1) }}" alt="Founders" class="image">
+                    {% else %}
+                    <img src="{{ url_for('static', filename='games_images/default_image.jpg') }}" alt="Default Game Picture" class="image">
+                    {% endif %}
+                    <div class="item-content">
+                        <p>{{ founder.name }}</p>
+                    </div>
+                </a>
+            </div>
             {% endfor %}
         {% else %}
             <li>No founders added yet, <a href="/add_founder">Add founder?</a></li>
@@ -60,7 +71,18 @@
     <ul>
         {% if user_companies %}
             {% for company in user_companies %}
-                <li><a href="/company/{{ company.id }}">{{ company.name }}</a></li>
+            <div class="item">
+                <a href="/company/{{ company.id }}" class="item-link">
+                    {% if company.picture_1 %}
+                    <img src="{{ url_for('static', filename='companies_images/' ~ company.picture_1) }}" alt="Companies" class="image">
+                    {% else %}
+                    <img src="{{ url_for('static', filename='games_images/default_image.jpg') }}" alt="Default Game Picture" class="image">
+                    {% endif %}
+                    <div class="item-content">
+                        <p>{{ company.name }}</p>
+                    </div>
+                </a>
+            </div>
             {% endfor %}
         {% else %}
             <li>No companies added yet, <a href="/add_company">Add company?</a></li>
@@ -73,7 +95,18 @@
     <ul>
         {% if user_directors %}
             {% for director in user_directors %}
-                <li><a href="/director/{{ director.id }}">{{ director.name }}</a></li>
+            <div class="item">
+                <a href="/director/{{ director.id }}" class="item-link">
+                    {% if director.picture_1 %}
+                    <img src="{{ url_for('static', filename='directors_images/' ~ director.picture_1) }}" alt="Directors" class="image">
+                    {% else %}
+                    <img src="{{ url_for('static', filename='games_images/default_image.jpg') }}" alt="Default Game Picture" class="image">
+                    {% endif %}
+                    <div class="item-content">
+                        <p>{{ director.name }}</p>
+                    </div>
+                </a>
+            </div>
             {% endfor %}
         {% else %}
             <li>No directors added yet, <a href="/add_directors">Add director?</a></li>
