--- a/app/templates/founder.html
+++ b/app/templates/founder.html
@@ -52,7 +52,7 @@
             </div>
             <hr class="red-line">
             {% if founder.picture_2 %}
-            <img src="{{ url_for('static', filename='founders_images/' ~ director.picture_2) }}" alt="Founder Picture 2" class="images-size">
+            <img src="{{ url_for('static', filename='founders_images/' ~ founder.picture_2) }}" alt="Founder Picture 2" class="images-size">
             {% else %}
             <img src="{{ url_for('static', filename='games_images/default_image.jpg') }}" alt="Default Game Picture" class="images-size">
             {% endif %}
