--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,21 +5,23 @@
     <div class="page-name">
         Login
     </div>
-    <form method="POST" action="{{ url_for('login') }}">
+    <form method="POST" id="submit_login_form" action="{{ url_for('login') }}">
         {{ login_form.hidden_tag() }}
         <div>
+            <p>Email</p><br>
             <input type="text" class="add_stuff_bar" maxlength="20" name="login_user_email" placeholder="Email(maxlength = 20)">
             {% if login_form.login_user_email.errors %}
             <span class="error-message">{{ login_form.login_user_email.errors[0] }}</span>
             {% endif %}
         </div>
         <div>
+            <p>Password</p><br>
             <input type="password" class="add_stuff_bar" maxlength="20" name="login_user_password" placeholder="password(maxlength = 20)">
             {% if login_form.login_user_password.errors %}
             <span class="error-message">{{ login_form.login_user_password.errors[0] }}</span>
             {% endif %}
         </div>
-        <button type="submit">Login</button>
+        <button type="submit" id="submit-login-Button">Login</button>
     </form>
     <a href="/register">Don't have an account? Register</a>
 </div>
