--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -5,41 +5,41 @@
     <div class="page-name">
         Register
     </div>
-    <form id="submit_form" method="POST" enctype="multipart/form-data" action="{{ url_for('register') }}">
+    <form method="POST" id="submit_register_form" enctype="multipart/form-data" action="{{ url_for('register') }}">
         {{ username_form.hidden_tag() }}
-        <div>Picture:
-            <input type="file" id="user_picture" class="add_stuff_bar" name="user_picture">
+        <div><p>Picture</p><br>
+            <input type="file" id="register_picture_size_limit" class="add_stuff_bar" name="user_picture">
             {% if username_form.user_picture.errors %}
             <span class="error-message">{{ username_form.user_picture.errors[0] }}</span>
             {% endif %}
         </div>
         
-        <div>
+        <div><p>Email</p><br>
             <input type="text" class="add_stuff_bar" maxlength="20" name="user_email" placeholder="Email (maxlength=20)">
             {% if username_form.user_email.errors %}
             <span class="error-message">{{ username_form.user_email.errors[0] }}</span>
             {% endif %}
         </div>
-        <div>
+        <div><p>Name</p><br>
             <input type="text" class="add_stuff_bar" maxlength="20" name="user_name" placeholder="Name (maxlength=20)">
             {% if username_form.user_name.errors %}
             <span class="error-message">{{ username_form.user_name.errors[0] }}</span>
             {% endif %}
         </div>
-        <div>
+        <div><p>Password</p><br>
             <input type="password" class="add_stuff_bar" maxlength="20" name="user_password" placeholder="Password (maxlength=20)">
             {% if username_form.user_password.errors %}
             <span class="error-message">{{ username_form.user_password.errors[0] }}</span>
             {% endif %}
         </div>
-        <div>
+        <div><p>Confirm password</p><br>
             <input type="password" class="add_stuff_bar" maxlength="20" name="confirm" placeholder="Confirm Password (maxlength=20)">
             {% if username_form.confirm.errors %}
             <span class="error-message">{{ username_form.confirm.errors[0] }}</span>
             {% endif %}        
         </div>
 
-        <button type="submit" id="submitButton">Register</button>
+        <button type="submit" id="submit-register-Button">Register</button>
     </form>
     <a href="/login">Already have an account? Login</a>
 </div>
